japanense page online!!!

--- a/about_author_JP.html
+++ b/about_author_JP.html
@@ -18,6 +18,7 @@
 		<title>Project NNKIEH Homepage</title>
 		<link rel="stylesheet" href="styles/header.css" type="text/css">
 		<link rel="stylesheet" href="styles/style.css" type="text/css">
+		<link rel="stylesheet" href="styles/common.css" type="text/css">
 
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/icon144.png"> 
 		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/icon114.png">
@@ -25,41 +26,38 @@
 		<link rel="apple-touch-icon-precomposed" href="images/icon57.png">
 		<link rel="shortcut icon" href="images/icon128.png">
 	</head>
-<body>
 
-<div id="index_visual"> <!-- Main picture as background-->
-	<div class="main_visual"></div>
-</div>
+<body class="common_body">
 
 
 <header id="header">
 	<nav id="nav">
 	<p class="header_logo">
-		<a href="index.html">Project NNKIEH</a>
+		<a href="index_JP.html">Project NNKIEH</a>
 	</p>
 	<div class="header_menu">	
 		<ul class="header_menu_hide">
 			<li class="menu_button">
-				<a href="about_project.html">
+				<a href="about_project_JP.html">
 					<p class="icon">
-					關於<br>About
+					概要<br>About
 					</p>
 				</a>
 			</li>
 			<li class="menu_button">
-				<a href="album.html">
+				<a href="album_JP.html">
 					<p class="icon">
-					相簿<br>Album</p>
+					アルバム<br>Album</p>
 				</a>
 			</li>
 			<li class="menu_button">
-				<a href="download.html">
+				<a href="download_JP.html">
 					<p class="icon">
-					下載與安裝<br>Download</p>
+					ダウンロード<br>Download</p>
 				</a>
 			</li>
 			<li class="menu_button">
-				<a href="about_author.html">
+				<a href="about_author_JP.html">
 					<p class="icon">
 					作者<br>Author</p>
 				</a>
@@ -70,8 +68,8 @@
 				<li>
 					<p class="language_off_menu" onclick="clickLanguageMenu()">Language</p>
 					<ul class="language_menu_inner" id="language_list">
-						<li><a href="index.html">繁體中文</a></li>
-						<li><a href="index_JP.html">日本語</a></li>
+						<li><a href="about_author.html">繁體中文</a></li>
+						<li><a href="">日本語</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -81,54 +79,47 @@
 	</nav>
 </header>
 
-<section id="index_top">
-	<div class="main_logo"><h1>_</h1></div>
-	<div class="wrap">
-		<div class="index_notice_news">
-			<p class="notice_title_news">最新消息 News</p>
-			<ul class="news_list">
-				<li>
-					<p class="date">2023. 03. 28</p>
-					網頁重製中
-				</li>
-				<li>
-					<p class="date">2023. 01. 01</p>
-					新年快樂
-				</li>
-			</ul>
-		</div>
-	</div>
-</section>
 
-<section id="index_video">
+<div class="pagetitle">
+	<h1>作者について</h1>
+	<h2>About Author</h2>
+</div>
+
+<section class="common_section">
 	<div class="wrap">
-		<div class="video_demo">	
-			<h2>【初音未來】光拾い【Cover】</h2>
-			<div class="video">
-				<iframe width="960" height="540" src="https://www.youtube.com/embed/eHv-X9SKYOc" 
-				frameborder="0" allowfullscreen></iframe>
-				
+		<div class="content">	
+			<h2>あゆきってだれ？</h2>
+			<hr>
+			<div class="photo">
+				<img src="images/me.png">
 			</div>
-			<div class="YTLink"><a href="">→ Youtube版連結</a></div>
-			<p>原作：《拾光》南科實中110級畢業歌　　日文版改編：あゆき</p>
+			
+			<h3>自己紹介</h3>
+			<ul>
+				<li>氏名：江 旻洋(ジャン ミンヤン) / あゆき</li>
+				<li>誕生年月：2002年1月</li>
+				<li>身分：国立清華大学コンピューターサイエンス専攻 三年生</li>
+			</ul>
+			<p>ミク廃です。雪ミクタンチョウちゃん大好き。</p>
+			<p>南科實中古参、付属幼稚園から高校まで15年間同じ学校に居ました。</p>
+			<p>2022年9月から2023年8月まで北海道大学工学部で交換留学します。</p>
+			<h3>連絡先</h3>
+			<p>Twitter <a href="https://twitter.com/pause582">@pause582</a></p>
+			<p>Facebook  <a href="https://www.facebook.com/pause582/">江旻洋 | Facebook</a> (活動休止)</p>
+			<p>Email  <a href="mailto:s109062208miku@gapp.nthu.edu.tw">s109062208miku@gapp.nthu.edu.tw</a></p>
+			<h3>よろしくお願いいたします。</h3>
+			<h3>みくみくにしてあげる♪</h3>
 		</div>
 	</div>
 </section>
 
-<section id="index_introduction">
-	<div class="wrap">
-		<h2>透過遊戲保存我們的回憶<br>使用Minecraft建造一個備份的虛擬南科實中！</h2>
-		<p>『Project NNKIEH』 是致力於使用Minecraft建造南科實中的計畫。起源於2020年，由當時的在校生江旻洋同學主導。遊戲中的高中部校舍於2021年夏天完工，官方網站也同步發表，並且獲得110級畢業生採用製作畢業歌《拾光》特別版MV。</p>
-		<p>『Project NNKIEH feat. Hatusne Miku』是利用歌聲合成軟體「初音未來」翻唱南科實中畢業歌的計畫。於2023年啟動，同樣由畢業生江旻洋主導，除了製作日文版翻唱歌曲、重製官方網站之外，也修正地圖檔的相容性。</p>
-	</div>
-</section>
 <footer>
 	<div class="wrap">
 		<h3>原作</h3>
 		<div class="name_list">
-		<span>劉木賢建築師事務所-國立南科國際實驗高級中學　高中部校舍</span>
+		<span>劉木賢建築士事務所-国立南科国際実験高校　高校部校庭</span>
 		</div>
-		<h3>專案負責人</h3>
+		<h3>監督</h3>
 		<div class="name_list">
 		<span>江旻洋</span>
 		</div>
@@ -142,7 +133,7 @@
 			/
 			<span>莊曜嘉</span>
 			/
-			<span>劉昀姍老師</span>
+			<span>劉昀姍先生</span>
 			/
 			<span>Morgan(楊淞甫)</span>
 			/
@@ -152,27 +143,27 @@
 			/
 			<span>簡芷嫺</span>
 			/
-			<span>張毓洪老師</span>
+			<span>張毓洪先生</span>
 			/
-			<span>蔡汶鴻老師</span>
+			<span>蔡汶鴻先生</span>
 			/
 			<span>楊念瑤</span>
 			/
-			<span>江旻修學長</span>
+			<span>江旻修先輩</span>
 			/
 			<span>初音ミク & her friends</span>
 		</div>
-		<h3>特別感謝</h3>
+		<h3>Special Thanks</h3>
 		<div class="name_list">
-			<span>王志誦老師</span>
+			<span>王志誦先生</span>
 			/
-			<span>蘇聖雄老師</span>
+			<span>蘇聖雄先生</span>
 			/
-			<span>南科實中全體同仁</span>
+			<span>南科實中の皆様</span>
 			/
 			<span>Mojang Studios</span>
 		</div>
-		<p>Hatsune Miku 是我們永遠的好朋友。20230330</p>
+		<p>Hatsune Miku は永遠に私たちの仲間です。20230330</p>
 	</div>
 	
 </footer>
