--- a/about_project.html
+++ b/about_project.html
@@ -69,7 +69,7 @@
 					<p class="language_off_menu" onclick="clickLanguageMenu()">Language</p>
 					<ul class="language_menu_inner" id="language_list">
 						<li><a href="">繁體中文</a></li>
-						<li><a href="">日本語</a></li>
+						<li><a href="about_author_JP.html">日本語</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -92,7 +92,7 @@
 			<hr>
 			<h3>Project NNKIEH</h3>
 			<p>「Project NNKIEH」 是致力於使用Minecraft建造一個備份南科實中的計畫。</p>
-			<p>本計畫可追朔至2019年，作者試圖使用Minecraft建造南科實中卻半途而廢的專案。2020年開始有組織的同時進行測量、蒐集參考資料、實景拍攝等工作。在2021年夏天完成建造工作，同時發布第一版官方網站，並且獲得110級畢業生採用製作畢業歌《拾光》特別版MV。 </p>
+			<p>本計畫可追溯至2019年，作者試圖使用Minecraft建造南科實中卻半途而廢的專案。2020年開始有組織的同時進行測量、蒐集參考資料、實景拍攝等工作。在2021年夏天完成建造工作，同時發布第一版官方網站，並且獲得110級畢業生採用製作畢業歌《拾光》特別版MV。 </p>
 			<h3>Project NNKEIH feat. Hatsune Miku</h3>
 			<p>2023年，作者使用歌聲和成軟體「初音未來」翻唱110級畢業歌《拾光》之專案，稱之為「Project NNKIEH feat. Hatsune Miku」。伴隨著新專案的進行，官網翻新以及地圖檔更新等工作也同時啟動。</p>
 			<h3>特色</h3>
@@ -203,8 +203,6 @@
 		</div>
 		<h3>協力</h3>
 		<div class="name_list">
-			<span>江旻洋</span>
-			/
 			<span>喵古米爾</span>
 			/
 			<span>Hale Lin(林廷翰)</span>
