--- a/album.html
+++ b/album.html
@@ -69,7 +69,7 @@
 					<p class="language_off_menu" onclick="clickLanguageMenu()">Language</p>
 					<ul class="language_menu_inner" id="language_list">
 						<li><a href="">繁體中文</a></li>
-						<li><a href="">日本語</a></li>
+						<li><a href="album_JP.html">日本語</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -142,8 +142,6 @@
 		</div>
 		<h3>協力</h3>
 		<div class="name_list">
-			<span>江旻洋</span>
-			/
 			<span>喵古米爾</span>
 			/
 			<span>Hale Lin(林廷翰)</span>
