--- a/index_JP.html
+++ b/index_JP.html
@@ -35,31 +35,31 @@
 <header id="header">
 	<nav id="nav">
 	<p class="header_logo">
-		<a href="index.html">Project NNKIEH</a>
+		<a href="index_JP.html">Project NNKIEH</a>
 	</p>
 	<div class="header_menu">	
 		<ul class="header_menu_hide">
 			<li class="menu_button">
-				<a href="about_project.html">
+				<a href="about_project_JP.html">
 					<p class="icon">
-					關於<br>About
+					概要<br>About
 					</p>
 				</a>
 			</li>
 			<li class="menu_button">
-				<a href="album.html">
+				<a href="album_JP.html">
 					<p class="icon">
-					相簿<br>Album</p>
+					アルバム<br>Album</p>
 				</a>
 			</li>
 			<li class="menu_button">
-				<a href="download.html">
+				<a href="download_JP.html">
 					<p class="icon">
-					下載與安裝<br>Download</p>
+					ダウンロード<br>Download</p>
 				</a>
 			</li>
 			<li class="menu_button">
-				<a href="about_author.html">
+				<a href="about_author_JP.html">
 					<p class="icon">
 					作者<br>Author</p>
 				</a>
@@ -85,15 +85,15 @@
 	<div class="main_logo"><h1>_</h1></div>
 	<div class="wrap">
 		<div class="index_notice_news">
-			<p class="notice_title_news">最新消息 News</p>
+			<p class="notice_title_news">新着情報 News</p>
 			<ul class="news_list">
 				<li>
 					<p class="date">2023. 03. 28</p>
-					網頁重製中
+					リメイク中...
 				</li>
 				<li>
 					<p class="date">2023. 01. 01</p>
-					新年快樂
+					あけましておめでとうございます
 				</li>
 			</ul>
 		</div>
@@ -103,32 +103,32 @@
 <section id="index_video">
 	<div class="wrap">
 		<div class="video_demo">	
-			<h2>【初音未來】光拾い【Cover】</h2>
+			<h2>【初音ミク】光拾い【カバー】</h2>
 			<div class="video">
 				<iframe width="960" height="540" src="https://www.youtube.com/embed/eHv-X9SKYOc" 
 				frameborder="0" allowfullscreen></iframe>
 				
 			</div>
-			<div class="YTLink"><a href="">→ Youtube版連結</a></div>
-			<p>原作：《拾光》南科實中110級畢業歌　　日文版改編：あゆき</p>
+			<div class="YTLink"><a href="">→ Youtubeはこちら</a></div>
+			<p>原作：《拾光》南科實中2021年度卒業曲　　日文語カバー：あゆき</p>
 		</div>
 	</div>
 </section>
 
 <section id="index_introduction">
 	<div class="wrap">
-		<h2>透過遊戲保存我們的回憶<br>使用Minecraft建造一個備份的虛擬南科實中！</h2>
-		<p>『Project NNKIEH』 是致力於使用Minecraft建造南科實中的計畫。起源於2020年，由當時的在校生江旻洋同學主導。遊戲中的高中部校舍於2021年夏天完工，官方網站也同步發表，並且獲得110級畢業生採用製作畢業歌《拾光》特別版MV。</p>
-		<p>『Project NNKIEH feat. Hatusne Miku』是利用歌聲合成軟體「初音未來」翻唱南科實中畢業歌的計畫。於2023年啟動，同樣由畢業生江旻洋主導，除了製作日文版翻唱歌曲、重製官方網站之外，也修正地圖檔的相容性。</p>
+		<h2>大切な思い出をちゃんと保存する<br>マイクラで私たちの高校を建てましょう！</h2>
+		<p>『Project NNKIEH』とは、2020年に高校生である江旻洋さんがMinecraftで 「南科實中(NNKIEH)」という台湾にある高校を作るプロジェクトです。2021年夏にマイクラでの校庭工事の完成と共にプロジェクトのホームページも発表しました。本プロジェクトは2021年卒後輩たちの卒業曲に特別版MVとして採用されました。</p>
+		<p>『Project NNKIEH feat. Hatusne Miku』とは、音楽ソフト「初音ミク」で南科實中の卒業曲をカバーするプロジェクトです。2023年に江旻洋さんによる始動され，曲の日本語カバー以外にもホームページリメイクとマップリメイクなどの活動がしています。</p>
 	</div>
 </section>
 <footer>
 	<div class="wrap">
 		<h3>原作</h3>
 		<div class="name_list">
-		<span>劉木賢建築師事務所-國立南科國際實驗高級中學　高中部校舍</span>
+		<span>劉木賢建築士事務所-国立南科国際実験高校　高校部校庭</span>
 		</div>
-		<h3>專案負責人</h3>
+		<h3>監督</h3>
 		<div class="name_list">
 		<span>江旻洋</span>
 		</div>
@@ -142,7 +142,7 @@
 			/
 			<span>莊曜嘉</span>
 			/
-			<span>劉昀姍老師</span>
+			<span>劉昀姍先生</span>
 			/
 			<span>Morgan(楊淞甫)</span>
 			/
@@ -152,27 +152,27 @@
 			/
 			<span>簡芷嫺</span>
 			/
-			<span>張毓洪老師</span>
+			<span>張毓洪先生</span>
 			/
-			<span>蔡汶鴻老師</span>
+			<span>蔡汶鴻先生</span>
 			/
 			<span>楊念瑤</span>
 			/
-			<span>江旻修學長</span>
+			<span>江旻修先輩</span>
 			/
 			<span>初音ミク & her friends</span>
 		</div>
-		<h3>特別感謝</h3>
+		<h3>Special Thanks</h3>
 		<div class="name_list">
-			<span>王志誦老師</span>
+			<span>王志誦先生</span>
 			/
-			<span>蘇聖雄老師</span>
+			<span>蘇聖雄先生</span>
 			/
-			<span>南科實中全體同仁</span>
+			<span>南科實中の皆様</span>
 			/
 			<span>Mojang Studios</span>
 		</div>
-		<p>Hatsune Miku 是我們永遠的好朋友。20230330</p>
+		<p>Hatsune Miku は永遠に私たちの仲間です。20230330</p>
 	</div>
 	
 </footer>
