update iframe and link

--- a/about_project.html
+++ b/about_project.html
@@ -126,10 +126,9 @@
 			<br>
 			<h3>【初音未來】光拾い【Cover】</h3>
 			<div class="video">
-				<iframe width="960" height="540" src="https://www.youtube.com/embed/eHv-X9SKYOc" 
-				frameborder="0" allowfullscreen></iframe>
+				<script type="application/javascript" src="https://embed.nicovideo.jp/watch/sm42014706/script?w=960&h=540"></script><noscript><a href="https://www.nicovideo.jp/watch/sm42014706">【初音ミク】光拾い【カバー曲】</a></noscript>
 			</div>
-			<div class="YTLink"><a href="">→ Youtube版連結</a></div>
+			<div class="YTLink"><a href="https://www.youtube.com/watch?v=PzFSh4bQidk" target="_blank">→ Youtube版連結</a></div>
 			<p>■ Midi、日文歌詞、Vocaloid調音、MV製作：江旻洋</p>
 			<p>■ 吉他重新編曲：江旻修</p>
 			<p>■ 日文版歌詞：</p>
