--- a/about_project_JP.html
+++ b/about_project_JP.html
@@ -125,10 +125,9 @@
 			<br>
 			<h3>【初音ミク】光拾い【カバー】</h3>
 			<div class="video">
-				<iframe width="960" height="540" src="https://www.youtube.com/embed/eHv-X9SKYOc" 
-				frameborder="0" allowfullscreen></iframe>
+				<script type="application/javascript" src="https://embed.nicovideo.jp/watch/sm42014706/script?w=960&h=540"></script><noscript><a href="https://www.nicovideo.jp/watch/sm42014706">【初音ミク】光拾い【カバー曲】</a></noscript>
 			</div>
-			<div class="YTLink"><a href="">→ Youtubeはこちら</a></div>
+			<div class="YTLink"><a href="https://www.youtube.com/watch?v=PzFSh4bQidk" target="_blank">→ Youtubeはこちら</a></div>
 			<p>■ Midi、日本語歌詞、ボカロ調声、MV制作：江旻洋(あゆき)</p>
 			<p>■ ギター協力：江旻修先輩</p>
 			<p>■ 日文語歌詞：</p>
