--- a/index.html
+++ b/index.html
@@ -105,11 +105,9 @@
 		<div class="video_demo">	
 			<h2>【初音未來】光拾い【Cover】</h2>
 			<div class="video">
-				<iframe width="960" height="540" src="https://www.youtube.com/embed/eHv-X9SKYOc" 
-				frameborder="0" allowfullscreen></iframe>
-				
+				<script type="application/javascript" src="https://embed.nicovideo.jp/watch/sm42014706/script?w=960&h=540"></script><noscript><a href="https://www.nicovideo.jp/watch/sm42014706">【初音ミク】光拾い【カバー曲】</a></noscript>
 			</div>
-			<div class="YTLink"><a href="">→ Youtube版連結</a></div>
+			<div class="YTLink"><a href="https://www.youtube.com/watch?v=PzFSh4bQidk" target="_blank">→ Youtube版連結</a></div>
 			<p>原作：《拾光》南科實中110級畢業歌　　日文版改編：あゆき</p>
 		</div>
 	</div>
