--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
 			<p class="notice_title_news">最新消息 News</p>
 			<ul class="news_list">
 				<li>
-					<p class="date">2023. 03. 28</p>
-					網頁重製中
+					<p class="date">2023. 03. 31</p>
+					《拾光》初音Cover版正式上傳！
 				</li>
 				<li>
-					<p class="date">2023. 01. 01</p>
-					新年快樂
+					<p class="date">2023. 03. 28</p>
+					網頁翻新中
 				</li>
 			</ul>
 		</div>
