--- a/index_JP.html
+++ b/index_JP.html
@@ -88,12 +88,12 @@
 			<p class="notice_title_news">新着情報 News</p>
 			<ul class="news_list">
 				<li>
-					<p class="date">2023. 03. 28</p>
-					リメイク中...
+					<p class="date">2023. 03. 31</p>
+					【初音ミク】光拾い【カバー】を公開しました！
 				</li>
 				<li>
-					<p class="date">2023. 01. 01</p>
-					あけましておめでとうございます
+					<p class="date">2023. 03. 28</p>
+					ホームページをリメイクしました。
 				</li>
 			</ul>
 		</div>
