--- a/index_JP.html
+++ b/index_JP.html
@@ -116,8 +116,8 @@
 <section id="index_introduction">
 	<div class="wrap">
 		<h2>大切な思い出をちゃんと保存する<br>マイクラで私たちの高校を建てましょう！</h2>
-		<p>『Project NNKIEH』とは、2020年に高校生である江旻洋さんがMinecraftで 「南科實中(NNKIEH)」という台湾にある高校を作るプロジェクトです。2021年夏にマイクラでの校庭工事の完成と共にプロジェクトのホームページも発表しました。本プロジェクトは2021年卒後輩たちの卒業曲に特別版MVとして採用されました。</p>
-		<p>『Project NNKIEH feat. Hatusne Miku』とは、音楽ソフト「初音ミク」で南科實中の卒業曲をカバーするプロジェクトです。2023年に江旻洋さんによる始動され，曲の日本語カバー以外にもホームページリメイクとマップリメイクなどの活動がしています。</p>
+		<p>『Project NNKIEH』とは、2020年に高校生である江旻洋がMinecraftで 「南科實中(NNKIEH)」という台湾にある高校を作るプロジェクトです。2021年夏にマイクラでの校庭工事の完成と共にプロジェクトのホームページも発表しました。本プロジェクトは2021年卒後輩たちの卒業曲に特別版MVとして採用されました。</p>
+		<p>『Project NNKIEH feat. Hatusne Miku』とは、音楽ソフト「初音ミク」で南科實中の卒業曲をカバーするプロジェクトです。2023年に江旻洋さんによる始動され，曲の日本語カバー以外にもホームページリメイクとマップリメイクなどの活動もしています。</p>
 	</div>
 </section>
 <footer>
